--- a/app/templates/components/trip-form.hbs
+++ b/app/templates/components/trip-form.hbs
@@ -1,1 +1,43 @@
-{{yield}}
+<div class="modal">
+  <form class="modal-card" onSubmit={{action "saveTrip"}}>
+    <h3 class="modal-heading">Add new trip for {{bicycle.brand}} bike </h3>
+
+    <div class="modal-content">
+      <div class="field">
+        <label>Renting hours:</label>
+        {{input type="text" placeholder="Trip Time(In hours)" value=trip.rentHours}}
+        
+        {{#if (v-get this 'rentHours' 'isInvalid')}}
+          <span class="error-message">
+            {{v-get this 'rentHours' 'message'}}
+          </span>
+        {{/if}}
+      </div>
+      <div class="field">
+        <label>Rent point:</label>
+        {{input type="text" placeholder="Rent point" value=trip.rentPoint}}
+
+        {{#if (v-get this 'rentPoint' 'isInvalid')}}
+          <span class="error-message">
+            {{v-get this 'rentPoint' 'message'}}
+          </span>
+        {{/if}}
+      </div>
+      <div class="field">
+        <label>Renting date is (YYYY-MM-DD):</label>
+        {{input type="text" placeholder="Renting date" value=trip.rentDate}}
+
+        {{#if (v-get this 'rentDate' 'isInvalid')}}
+          <span class="error-message">
+            {{v-get this 'rentDate' 'message'}}
+          </span>
+        {{/if}}
+      </div>
+    </div>
+
+    <div class="modal-footer">
+      {{#link-to "bicycle.detail" bicycle.id class="btn-clear"}}Cancel{{/link-to}}
+      <button type="submit" class="btn-submit">Submit</button>
+    </div>
+  </form>
+</div>
