Refactored many things, made 3 layers of corresponding data and relations between them

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,6 +9,7 @@
 
     <ul>
       <li>{{#link-to "bicycle"}}Bicycles{{/link-to}}</li>
+      <li>{{#link-to "point"}}Rent points{{/link-to}}</li>
       <li>{{#link-to "history"}}History{{/link-to}}</li>
     </ul>
   </nav>
