--- a/app/templates/components/history-item.hbs
+++ b/app/templates/components/history-item.hbs
@@ -1,3 +1,3 @@
-{{#link-to "bicycle.detail" bicycleId}}
-  {{ get-trip-name rentPoint rentHours rentDate bicycleId }}
+{{#link-to "point.detail" pointId}}
+  {{ get-trip-name rentHours rentDate pointName }}
 {{/link-to}}
